# embedded-varvara

./: Cargo.toml  readme.md
src/: console.rs  lib.rs  screen.rs
